objects/Fee_Distribution__c.object
<CustomObject>
  <fields>
        <fullName>Base_Price_W_USD__c</fullName>
        <inlineHelpText>lease incentive fee dollars per watt paid to the builder</inlineHelpText>
        <label>Base Price ($/W) USD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
  <fields>
        <fullName>Loyalty_Program_W_USD__c</fullName>
        <inlineHelpText>lease incentive fee dollars per watt paid to the builder for participation in the loyalty program</inlineHelpText>
        <label>Loyalty Program ($/W) USD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
  <fields>
        <fullName>NSHP_W_USD__c</fullName>
        <description>The amount to be paid to the builder above the normal amount because the community rebate program = NSHP</description>
        <inlineHelpText>The amount to be paid to the builder above the normal amount because the community rebate program = NSHP</inlineHelpText>
        <label>NSHP ($/W) USD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
  <fields>
        <fullName>Right_size_W_USD__c</fullName>
        <description>The amount to be paid to the builder above the normal amount because the community is right-sized</description>
        <inlineHelpText>The amount to be paid to the builder above the normal amount because the community is right-sized</inlineHelpText>
        <label>Right size ($/W) USD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
</CustomObject>